# web-app-boilerplate-2023

./: db.sqlite3  docker-compose.yml  pyproject.toml
client/: .eslintrc.js  .gitattributes  .pnp.cjs  .yarnrc.yml  Dockerfile  craco.config.js  package.json
client/src/: App.tsx
config/: settings.py
server/: .gitignore  Dockerfile  pyproject.toml
server/apps/checker/: views.py
server/config/: settings.py  urls.py
