[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Chris Chow <chris.d.chow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.black]
line-length = 99 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
